--- a/node_bu/public/outliers.html
+++ b/node_bu/public/outliers.html
@@ -12,69 +12,15 @@
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="https://app.switchers.ai/images/icons/favicon.svg"/>
 
-    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-          rel="stylesheet" type="text/css">
-    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          rel="stylesheet" type="text/css">
-    <link crossorigin="anonymous" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css"
-          rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           crossorigin="anonymous">
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
     <link rel="stylesheet" href="css/main_view.css">
-    <link rel="stylesheet" href="css/questions.css">
+    <link rel="stylesheet" href="css/outliers.css">
 </head>
-<style>
-    .col-8 .btn {
-        margin: 0 2px; /* Adjust the space between buttons */
-    }
 
-    /* Custom CSS for scrollable container */
-    .scrollable-container {
-        max-height: 80vh; /* Adjust the maximum height as needed */
-        overflow-y: auto;
-    }
-
-    /* Media query for small screens */
-    @media (max-width: 576px) {
-        .scrollable-container {
-            max-height: 35vh; /* Adjusted height for small screens */
-            overflow-y: scroll;
-        }
-    }
-
-    /* Custom CSS for distinction between list items */
-    .list-group-item {
-        border: 1px solid #dee2e6; /* Add border around list items */
-        cursor: pointer;
-        transition: background-color 0.3s ease; /* Smooth transition for background color */
-    }
-
-    .list-group-item.clicked {
-        background-color: rgba(144, 181, 230, 0.87); /* Background color for clicked item */
-    }
-
-    .list-group-item:hover {
-        background-color: #9ed797; /* Background color on hover */
-    }
-
-    .list-group-item:not(:last-child) {
-        border-bottom: 1px solid #6f7580; /* Add border between list items */
-    }
-
-    .chart-container {
-        width: auto; /* or any other fixed size */
-        height: 71.55vh;
-    }
-
-    .navbar-brand img {
-        height: 40px; /* or whatever size you prefer */
-        width: auto; /* this will keep the image ratio */
-        /* additional styles if needed */
-    }
-</style>
 <body class="body-background-dark">
 
 <div>
@@ -87,29 +33,34 @@
 
         <div class="collapse navbar-collapse" id="switchers-navbar">
             <div class="navbar-nav">
-                <button type="button" class="btn btn-sm text-white m-1" id="settings-nav-btn" data-toggle="tooltip"
+                <button type="button" class="btn btn-sm text-white m-1" id="settings-nav-btn"
+                        data-target="settings.html"
+                        data-toggle="tooltip"
                         data-placement="bottom" title="settings">
                     <i class="bi bi-gear"></i>
                     Settings
                 </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="net-nav-btn" data-toggle="tooltip"
+                <button type="button" class="btn btn-sm text-white m-1" id="net-nav-btn"
+                        data-target="net.html"
+                        data-toggle="tooltip"
                         data-placement="bottom" title="net">
                     <i class="bi bi-speedometer2"></i>
                     Net
                 </button>
                 <button type="button" class="btn btn-sm text-white m-1" id="questions-nav-btn"
+                        data-target="questions.html"
                         data-toggle="tooltip" data-placement="bottom" title="questions">
                     <i class="bi bi-pie-chart"></i>
                     Questions
                 </button>
                 <button type="button" class="btn btn-sm bg-primary text-white m-1" id="impacts-nav-btn"
-                        data-toggle="tooltip" data-placement="bottom" title="Impacts">
+                        data-target="outliers.html"
+                        data-toggle="tooltip" data-placement="bottom" title="impacts">
                     <i class="bi bi-clipboard-data"></i>
                     Impacts
                 </button>
             </div>
         </div>
-
 
         <!-- DARK MODE TOGGLE -->
         <div class="ml-2 mr-5">
@@ -163,35 +114,6 @@
                             <!--                            </div>-->
                         </div>
                     </div>
-                    <!--                    <div class="col-md-9 mb-2 col-9 mb-1">-->
-                    <!--                        <div class="card">-->
-                    <!--                            <div class="card bg-dark d-flex justify-content-center">-->
-                    <!--                                <div class="row p-2 align-items-center">-->
-                    <!--                                    <div class="col-4">-->
-                    <!--                                        <h3 class="text-white">Outliers Data</h3>-->
-                    <!--                                    </div>-->
-                    <!--                                    <div class="col-4">-->
-                    <!--                                        <label for="sensitivity-level-input" class="text-white">Sensitivity level:-->
-                    <!--                                            <strong class="text-success" id="sensitivity-level-value"></strong></label>-->
-                    <!--                                        <input type="range" class="form-control-range" id="sensitivity-level-input"-->
-                    <!--                                               min="0" max="100" value="30">-->
-                    <!--                                    </div>-->
-                    <!--                                    <div class="col-4">-->
-                    <!--                                        <button class="btn btn-sm btn-success btn-block" id="new-data-btn">-->
-                    <!--                                            <i class="bi bi-arrow-clockwise"></i>-->
-                    <!--                                            Get New Data-->
-                    <!--                                        </button>-->
-                    <!--                                    </div>-->
-                    <!--                                </div>-->
-                    <!--                            </div>-->
-                    <!--                        </div>-->
-                    <!--                        <div class="card mt-2">-->
-                    <!--                            <div class="chart-container" style="position: relative;">-->
-                    <!--                                <canvas id="questions-chart"></canvas>-->
-                    <!--                            </div>-->
-                    <!--                        </div>-->
-                    <!--                    </div>-->
-
 
                     <div class="col-md-9 mb-2 col-sm-12 mb-1">
                         <div class="card">
@@ -203,9 +125,9 @@
                                     <div class="col-8 d-flex justify-content-end">
                                         <!-- Use flexbox to space out buttons -->
                                         <button type="button" class="btn btn-secondary sensitivity-level-button"
-                                                data-level="high">High
+                                                data-level="high" value="high">High
                                         </button>
-                                        <button type="button" class="btn btn-primary sensitivity-level-button"
+                                        <button type="button" class="btn btn-secondary sensitivity-level-button"
                                                 data-level="medium">Medium
                                         </button>
                                         <button type="button" class="btn btn-secondary sensitivity-level-button"
@@ -221,8 +143,6 @@
                             </div>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </main>
@@ -252,6 +172,7 @@
 <script crossorigin="anonymous" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"
         type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
