--- a/node_bu/public/settings.html
+++ b/node_bu/public/settings.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <link href="images/icons/favicon.svg" rel="shortcut icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" href="images/icons/favicon.svg">
 
     <title>Switchers.ai | Settings</title>
 
-    <meta property="og:title" content="Switchers.ai | Settings" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://app.switchers.ai/images/icons/favicon.svg" />
+    <meta property="og:title" content="Switchers.ai | Settings">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://app.switchers.ai/images/icons/favicon.svg">
 
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
           rel="stylesheet" type="text/css">
@@ -24,28 +24,23 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/main_view.css">
-<!--    <link rel="stylesheet" href="css/settings.css">-->
+    <!--    <link rel="stylesheet" href="css/settings.css">-->
 </head>
 <body class="body-background-dark">
 <style>
     .navbar-brand img {
-        height: 40px; /* or whatever size you prefer */
-        width: auto; /* this will keep the image ratio */
-        /* additional styles if needed */
+        height: 40px;
+        width: auto;
     }
 
     /* Style for the floating button */
     #save-settings {
-        position: fixed; /* Fixed position relative to the viewport */
-        right: 20px; /* 20px from the right */
-        bottom: 20px; /* 20px from the bottom */
         padding: 10px 20px;
-        background-color: #007bff; /* Example background color */
-        color: white; /* Text color */
-        border: none; /* No border */
-        border-radius: 5px; /* Rounded corners */
-        cursor: pointer; /* Pointer cursor on hover */
-        z-index: 1000; /* Ensure it's above other items */
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
     }
 
     /* Optional: Add some responsiveness to ensure it doesn't overlap content */
@@ -56,31 +51,87 @@
             padding: 5px 10px;
         }
     }
+
+    /* Add some spacing */
+    .container-fluid {
+        padding-top: 20px;
+    }
+
+    .pt-2 {
+        padding-top: 20px;
+    }
+
+    .mt-3 {
+        margin-top: 15px;
+    }
+
+    .mb-2 {
+        margin-bottom: 10px;
+    }
+
+    h2 {
+        margin-bottom: 20px;
+        font-size: 24px;
+        font-weight: bold;
+    }
+
+    /* Adjust position of save button */
+    @media (max-width: 768px) {
+        #save-settings {
+            width: 100%;
+            text-align: center;
+            border-radius: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+    }
+
+    /* Flex container for the select and button */
+    .select-container {
+        display: flex;
+        align-items: center;
+    }
+
+    .select-container select {
+        flex: 1;
+        margin-right: 10px;
+    }
 </style>
 
 <div>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark">
-<!--        <h1 class="navbar-brand random-color text-success">Switchers.ai</h1>-->
+        <!--        <h1 class="navbar-brand random-color text-success">Switchers.ai</h1>-->
         <a href="https://switchers.ai" class="navbar-brand">
             <div class="logo dark-mode-logo" id="site-logo"></div>
         </a>
 
         <div class="collapse navbar-collapse" id="switchers-navbar">
             <div class="navbar-nav">
-                <button type="button" class="btn btn-sm bg-primary text-white m-1" id="settings-nav-btn" data-toggle="tooltip" data-placement="bottom" title="settings">
+                <button type="button" class="btn btn-sm bg-primary text-white m-1" id="settings-nav-btn"
+                        data-target="settings.html"
+                        data-toggle="tooltip"
+                        data-placement="bottom" title="settings">
                     <i class="bi bi-gear"></i>
                     Settings
                 </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="net-nav-btn" data-toggle="tooltip" data-placement="bottom" title="net">
+                <button type="button" class="btn btn-sm text-white m-1" id="net-nav-btn"
+                        data-target="net.html"
+                        data-toggle="tooltip"
+                        data-placement="bottom" title="net">
                     <i class="bi bi-speedometer2"></i>
                     Net
                 </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="questions-nav-btn" data-toggle="tooltip" data-placement="bottom" title="questions">
+                <button type="button" class="btn btn-sm text-white m-1" id="questions-nav-btn"
+                        data-target="questions.html"
+                        data-toggle="tooltip" data-placement="bottom" title="questions">
                     <i class="bi bi-pie-chart"></i>
                     Questions
                 </button>
-                <button type="button" class="btn btn-sm text-white m-1" id="impacts-nav-btn" data-toggle="tooltip" data-placement="bottom" title="outliers">
+                <button type="button" class="btn btn-sm text-white m-1" id="impacts-nav-btn"
+                        data-target="outliers.html"
+                        data-toggle="tooltip" data-placement="bottom" title="impacts">
                     <i class="bi bi-clipboard-data"></i>
                     Impacts
                 </button>
@@ -90,7 +141,8 @@
         <!-- DARK MODE TOGGLE -->
         <div class="ml-2 mr-5">
             <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" role="switch" id="toggle-dark-mode" data-toggle="tooltip" data-placement="bottom" title="dark/light mode">
+                <input class="form-check-input" type="checkbox" role="switch" id="toggle-dark-mode"
+                       data-toggle="tooltip" data-placement="bottom" title="dark/light mode">
                 <label class="form-check-label text-white" for="toggle-dark-mode">Dark/Light</label>
             </div>
         </div>
@@ -106,19 +158,22 @@
     <div class="container-fluid">
         <!--Main layout-->
         <main>
-
             <div class="pt-2">
                 <div class="row mt-3 mb-2">
                     <h2>Set point of view:</h2>
-                    <select id="pov-choice" class="form-select" aria-label="Default select example">
-                        <option disabled selected>Select a candidate to inspect</option>
-                        <option value="Përparim Rama">Përparim Rama</option>
-                        <option value="Arben Vitia">Arben Vitia</option>
-                    </select>
-                </div>
 
-                <!-- Floating button at the bottom -->
-                <button id="save-settings">Save Settings</button>
+                    <div class="col-md-3 mb-2 col-sm-12 mb-1">
+                        <select id="pov-choice" class="form-select" aria-label="Default select example">
+                            <option disabled selected>Select a candidate to inspect</option>
+                        </select>
+                        <!-- Floating button at the bottom -->
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 mb-2 col-sm-12 mb-1">
+                        <button id="save-settings">Save</button>
+                    </div>
+                </div>
             </div>
         </main>
         <!--Main layout-->
@@ -150,8 +205,8 @@
 <script crossorigin="anonymous" src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js"
         type="text/javascript"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="js/template.js" type="text/javascript"></script>
-<script src="js/settings.js" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="js/template.js"></script>
+<script src="js/settings.js"></script>
 </body>
 </html>
